--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -22,7 +22,10 @@
         "libs/website/ui-commons/src/index.ts"
       ],
       "@monorepo-tools/website/ui-conf": ["libs/website/ui-conf/src/index.ts"],
-      "@monorepo-tools/website/ui-home": ["libs/website/ui-home/src/index.ts"]
+      "@monorepo-tools/website/ui-home": ["libs/website/ui-home/src/index.ts"],
+      "@monorepo-tools/website/ui-build-systems": [
+        "libs/website/ui-build-systems/src/index.ts"
+      ],
     }
   },
   "exclude": ["node_modules", "tmp"]
